# generative_agents

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  DEV_NOTES.md  README.md  pyproject.toml
environment/frontend_server/: Procfile  manage.py
environment/frontend_server/compressed_storage/July1_the_ville_isabella_maria_klaus-step-3-20/: master_movement.json
environment/frontend_server/frontend_server/: urls.py  utils.py  wsgi.py
environment/frontend_server/frontend_server/settings/: __init__.py  base.py  local.py
environment/frontend_server/static_dirs/css/: style.css
environment/frontend_server/temp_storage/: curr_sim_code.json  path_tester_env.json  path_tester_out.json
environment/frontend_server/templates/: base.html
environment/frontend_server/templates/demo/: demo.html  main_script.html
environment/frontend_server/templates/home/: home.html  main_script.html  main_script_old_dolores.html
environment/frontend_server/templates/landing/: landing.html
environment/frontend_server/templates/path_tester/: main_script.html  path_tester.html
environment/frontend_server/templates/persona_state/: persona_state.html
environment/frontend_server/translator/: admin.py  apps.py  views.py
environment/frontend_server/translator/migrations/: 0001_initial.py  0002_evaldata_target_agent.py  (+3 more)
reverie/: compress_sim_storage.py
reverie/backend_server/: global_methods.py  maze.py  output.txt  path_finder.py  reverie.py  test.py  utils.py
reverie/backend_server/helpers/: config.py  embedding.py  llm.py
reverie/backend_server/persona/: persona.py
(+12207 files in other folders)
