[project]
name = "generative-agents"
version = "0.1.0"
description = " Generative Agents: Interactive Simulacra of Human Behavior."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django-cors-headers>=4.6.0",
    "django>=5.1.4",
    "numpy>=2.1.3",
    "openai>=1.57.0",
    "selenium>=4.27.1",
    "django-storages>=1.14.4",
    "pydantic-settings>=2.6.1",
    "loguru>=0.7.3",
    "llm-sentence-transformers>=0.2",
    "llm>=0.19.1",
    "llm-gpt4all>=0.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]
